@@ -1,3 +1,8 @@
+2006-02-14  Andy Wingo  <wingo@pobox.com>
+
+	* sys/glsink/glimagesink.c (gst_glimage_sink_init): Come on
+	schleef, don't break me gst-inspect -a.
+
 2006-02-14  Edward Hervey  <edward@fluendo.com>
 
 	* gst/qtdemux/qtdemux.c: (next_entry_size), (gst_qtdemux_chain):
